meopets/src/App.css
/* All pages */
body {
    background: #ACE3FF;
    font-family: Roboto;
    min-width: 1100px;
}
nav {
    box-shadow: 0px 4px 4px grey;
    background-color: #FFA9BA;
    padding-bottom: 15px;
    padding-top: 15px;
    margin-bottom: 30px;
    /*visibility: visible;*/
}
p {
    font-size: 30px;
    text-align: center;
}

.link {
    -webkit-text-stroke: 1px black;
    color: white;
    font-size: 24px;
    text-decoration: none;
}
.nav-link {
    -webkit-text-stroke: 1px black;
    color: white;
    font-size: 24px;
    font-weight: bold;
    text-decoration: none;
    margin-right: 30px;
}
/*.nav-txt{*/
/*    margin-left: 15px;*/
/*    font-size: 30px;*/
/*    margin-top: 0;*/
/*    color: #FAFAFA;*/
/*}*/

/* Login */
.form-title {
    text-align: center;
}
.login-form {
    background-color: #FFF4AA;
    border-color: #88C6ED;
    box-sizing: border-box;
    border-style: inset;
    max-width: 350px;
    padding: 30px 40px 30px 40px;
}

.login-input {
    display: block;
    width: 100%;
    padding: 7px 48px 8px 8px;
    line-height: 100%;
    margin: 6px 0;
    box-sizing: border-box;
}
.login-page {
    display: grid;
    justify-content: center;
}

.logout {
    -webkit-text-stroke: 1px black;
    background-color: #e66a83;
    border: none;
    color: white;
    display: inline-block;
    float: right;
    font-size: 24px;
    font-weight: bold;
    padding: 7px 32px;
}
.redirect {
    text-align: center;
}
.redirect-link {
    -webkit-text-stroke: 1px black;
    color: #FFA9BA;
    font-weight: bold;
    text-decoration: none;
    text-shadow: 2px 2px 4px #000000;
}
/* Signup page */
.signup{
    text-align: center;
}

/* Pets */
.pet {
    color: black;
    text-decoration: none;
}

/* User Profile */
.coins {
    display: inline;
    font-size: medium;
    text-align:start;
}
.coins-img {
    height: 25px;
    width: 25px;
    margin-top: 12px;
    margin-left: 6px;
    margin-right: 6px;
}
.currency {
    margin-top: 20px;
    margin-left: 40px;
    vertical-align: middle;
    height: 40px;
    display:inline-flex;
    flex-direction: row;
    border: 2px solid #FFF4AA;
    background-color: azure;
    border-radius: 10px;
    text-align: center;
    box-shadow: 0 6px 20px -5px;
    padding-bottom: 6px;
    padding-right: 6px;
}

/* Fishing */
.blue-fish, .green-fish, .purple-fish, .red-fish {
    height: 20px;
    width: 35px;
}
.box-color {
    height: 50px;
    width: 120px;
    margin-left: 20px;
    border-radius: 5px;
    background-color: white;
}
.canvas-p {
    width: 1200px;
    height: 1000px;
    border: 2px solid #ACE3FF;
    cursor:url(../public/fishing-rod.png),auto;
}
.game-inst {
    width: 280px;
    margin-left: 25px;
    font-size: small;
}
.game-row {
    display: flex;
    flex-direction:row;
    align-items: center;
    margin-left: 40px;
}
.minig-page {
    cursor:url(../public/fishing-rod.png),auto;
}
.prof-msg{
    margin-top: 30px;
    margin-left: 50px;
    display: inline-flex;
    text-align: center;
    border-radius: 50%;
    background: #FAFAFA;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
.prof-msg-txt {
    padding: 10px;
}
/* GoldGame */
.gold-coin{
    height: 13px;
    width: 13px;
    margin-top: 900;
    cursor: move;
}
.canvas-g{
    width: 1200px;
    height: 1000px;
    border: 2px solid #ACE3FF;
}
container {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 10px;
  }
  
.pot {
    width: 100px;
    height: 90px;
    margin-left: 50px;
  }
  .start-btn{
    font-weight: bold;
    margin-left: 40px;
    background-color: #FFF4AA;
    border: 2px solid #c9c5b0;
    width: 85px;
    height: 35px;
    border-radius: 5px;
    font-size: 20px;
  }
  .start-btn:hover{
    background-color: #dfd38b;
  }
  .prev-img{
      width: 55px;
      height: 55px;
      margin-top: 5px;
      margin-left: 20px;
  }
  .singe-pet-img{
      width: 180px;
      height: 180px;
  }
  .all-pet-img{
    width: 80px;
    height: 80px;
}

